# movie-user-ratings

./: .gitignore  EDA.ipynb  Final notebook.ipynb  README.md  movie_lens_feature_engineering.ipynb  pyproject.toml
