[tool.poetry]
name = "movie-user-ratings"
version = "0.1.0"
description = ""
authors = ["niv.bar <niv.bar@peer39.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"
pandas = "^2.2.3"
numpy = "^2.2.1"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
