[tool.poetry]
name = "movie-user-ratings"
version = "0.1.0"
description = ""
authors = ["niv.bar <niv.bar@peer39.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"
pandas = "^2.2.3"
numpy = "^1.26.0"
scikit-learn = "^1.6.0"
torch = "^2.5.1"
matplotlib = "^3.10.0"
tensorflow = "^2.18.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
